@@ -1,0 +1,80 @@
+<?xml version="1.0"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<project name="equals-test" xmlns:au="antlib:org.apache.ant.antunit"
+         default="antunit">
+
+  <import file="../../antunit-base.xml" />
+
+  <target name="test-noforcestring">
+    <string id="s" value="foo" />
+    <au:assertFalse>
+      <equals arg1="foo" arg2="${ant.refid:s}" />
+    </au:assertFalse>
+  </target>
+
+  <target name="test-forcestring">
+    <string id="s" value="foo" />
+    <au:assertTrue>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" />
+    </au:assertTrue>
+  </target>
+
+  <target name="test-forcestring-notrim">
+    <string id="s" value=" foo " />
+    <au:assertFalse>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" />
+    </au:assertFalse>
+  </target>
+
+  <target name="test-forcestring-trim">
+    <string id="s" value=" foo " />
+    <au:assertTrue>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" trim="true" />
+    </au:assertTrue>
+  </target>
+
+  <target name="test-forcestring-cs">
+    <string id="s" value="Foo" />
+    <au:assertFalse>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" />
+    </au:assertFalse>
+  </target>
+
+  <target name="test-forcestring-nocs">
+    <string id="s" value="Foo" />
+    <au:assertTrue>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" casesensitive="false" />
+    </au:assertTrue>
+  </target>
+
+  <target name="test-forcestring-trim-cs">
+    <string id="s" value=" Foo " />
+    <au:assertFalse>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true" trim="true" />
+    </au:assertFalse>
+  </target>
+
+  <target name="test-forcestring-trim-nocs">
+    <string id="s" value=" Foo " />
+    <au:assertTrue>
+      <equals arg1="foo" arg2="${ant.refid:s}" forcestring="true"
+              trim="true" casesensitive="false" />
+    </au:assertTrue>
+  </target>
+
+</project>
